--- a/GreenForce/app/src/main/AndroidManifest.xml
+++ b/GreenForce/app/src/main/AndroidManifest.xml
@@ -54,6 +54,11 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/maps_api_key" />
-    </application>
 
+
+
+           <service android:name=".services.LocationService"
+                    android:stopWithTask="true"/>
+
+    </application>
 </manifest>
