--- a/GreenForce/app/src/main/AndroidManifest.xml
+++ b/GreenForce/app/src/main/AndroidManifest.xml
@@ -27,27 +27,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddFriendsViaMapsActivity" />
+        <activity android:name=".activities.AddFriendsViaMapsActivity" />
         <activity
-            android:name=".AddFriendsViaBluetoothActivity"
+            android:name=".activities.AddFriendsViaBluetoothActivity"
             android:label="@string/title_activity_add_friends_via_bluetooth"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".MyFriendsActivity"
+            android:name=".activities.MyFriendsActivity"
             android:label="@string/title_activity_my_friends"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".MyProfileActivity" />
-        <activity android:name=".HomePageActivity" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".SplashScreenActivity">
+        <activity android:name=".activities.MyProfileActivity" />
+        <activity android:name=".activities.HomePageActivity" />
+        <activity android:name=".activities.RegisterActivity" />
+        <activity android:name=".activities.LoginActivity" />
+        <activity android:name=".activities.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".activities.MainActivity" />
       <meta-data
           android:name="com.google.android.gms.version"
           android:value="@integer/google_play_services_version"/>
