--- a/GreenForce/app/build.gradle
+++ b/GreenForce/app/build.gradle
@@ -44,7 +44,8 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     //noinspection GradleDynamicVersion
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
+
 
 
 }
