--- a/GreenForce/app/src/main/AndroidManifest.xml
+++ b/GreenForce/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         <activity android:name=".activities.HomePageActivity" />
         <activity android:name=".activities.RegisterActivity" />
         <activity android:name=".activities.LoginActivity" />
+        <activity android:name=".activities.EventActivity" />
         <activity android:name=".activities.NotificationsActivity" />
         <activity android:name=".activities.SplashScreenActivity">
             <intent-filter>
