--- a/GreenForce/app/src/main/AndroidManifest.xml
+++ b/GreenForce/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name=".activities.LoginActivity" />
         <activity android:name=".activities.EventActivity" />
         <activity android:name=".activities.NotificationsActivity" />
+        <activity android:name=".activities.UploadPhotoActivity" />
         <activity android:name=".activities.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
