--- a/GreenForce/app/src/main/AndroidManifest.xml
+++ b/GreenForce/app/src/main/AndroidManifest.xml
@@ -28,7 +28,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MarkASpotActivity"></activity>
+        <activity
+            android:name=".EventsMapActivity"
+            android:label="@string/title_activity_events_map"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".activities.MarkASpotActivity" />
         <activity android:name=".activities.RankingsActivity" />
         <activity android:name=".activities.AddFriendsViaMapsActivity" />
         <activity
