--- a/GreenForce/app/src/main/AndroidManifest.xml
+++ b/GreenForce/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.EnableCustomServicesActivity"></activity>
+        <activity android:name=".activities.LikeDislikeEvent"></activity>
+        <activity android:name=".activities.EnableCustomServicesActivity" />
         <activity
             android:name=".activities.CurrentEventsActivity"
             android:label="@string/title_activity_current_events"
